--- a/templates/c/builder/makefile
+++ b/templates/c/builder/makefile
@@ -1,8 +1,9 @@
 build:
 	mkdir build;\
 	cd build;\
-	gcc -I../ext/* -c ../src/*.c ../src/*.h;\
+	gcc -I../lib/* -c ../src/*.c ../src/*.h;\
 	gcc *.o -o build;\
+	rm *.o;
 
 clean:
 	rm -rf build
