--- a/templates/c/builder/makefile-tester-manual
+++ b/templates/c/builder/makefile-tester-manual
@@ -1,7 +1,7 @@
 build:
 	mkdir build;\
 	cd build;\
-	gcc -I../ext/* -c ../src/*.c ../src/*.h;\
+	gcc -I../lib/* -c ../src/*.c ../src/*.h;\
 	gcc *.o -o build;\
 	rm *.o
 
@@ -14,7 +14,7 @@ run:
 build-tests:
 	mkdir build-tests;\
 	cd build-tests;\
-	gcc -I../ext/* -c ../src/*.h ../tests/*.h ../src/*.c ../tests/*.c;\
+	gcc -I../lib/* -c ../src/*.h ../tests/*.h ../src/*.c ../tests/*.c;\
 	gcc *.o -o tests-build;\
 	rm *.o;\
 	cd ..
