--- a/templates/c/builder/makefile-pch
+++ b/templates/c/builder/makefile-pch
@@ -1,7 +1,7 @@
 build:
 	mkdir build;\
 	cd build;\
-	gcc -I../lib/* -c ../src/*.c;\
+	gcc -I../lib/* -c ../src/*.c ../src/*.h;\
 	gcc *.o -o build;\
 	rm *.o;
 
